--- a/dice/src/App.css
+++ b/dice/src/App.css
@@ -2,7 +2,35 @@
 .center {
   text-align: center;
 }
+
+.appBackground {
+  background-color:#ECE7E7;
+  height: 100vh;
+}
 /********   End of Global    ********/
+
+/********   Start of Point Component    ********/
+.pointArea {
+  text-align: center;
+  height: 25vh;
+  width: 50%;
+  background-color: white;
+  font-size: 10vh;
+  border-color: black;
+  border-style: solid;
+  border-width: 1px;
+}
+/********   End of Point Component    ********/
+
+/********   Start of Dice Component    ********/
+.leftDice {
+  text-align: right;
+}
+
+.rightDice {
+  text-align: left;
+}
+/********   End of Dice Component    ********/
 
 /********** Old Stuff*********/
 .App {
