--- a/dice/src/App.css
+++ b/dice/src/App.css
@@ -10,6 +10,10 @@
 .aboveWhiteSpace {
   margin-top: 3vh;
 }
+
+.blueColor {
+  color: navy;
+}
 /********   End of Global    ********/
 
 /********   Start of Point Component    ********/
